# drugs-api

./: .gitignore  pyproject.toml
src/: example.py  main.py  settings.py
src/etl/: extract.py  load.py  transform.py
